--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,8 @@
 
     <include layout="@layout/toolbar"/>
 
-    <fragment
-        android:id="@+id/fragment"
-        android:name="bitninja.de.shutterstocktest.main.MainActivityFragment"
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 </LinearLayout>
